--- a/src/intro.tex
+++ b/src/intro.tex
@@ -323,10 +323,10 @@ Source code is freely available.
 \subsection{Notation}
 \label{notation}
 When syntax highlighting is used to read this, text that is not typed literally is often highlighted with the Special group.
-These are items in \texttt{[]}, \texttt{{}} and \texttt{<>}, and \texttt{CTRL-X}.
+These are items in \texttt{[]}, \texttt{\{\}} and \texttt{<>}, and \texttt{CTRL-X}.
 
 Note that Vim uses all possible characters in commands.
-Sometimes the \texttt{[]}, \texttt{{}} and \texttt{<>} are part of what you type, the context should make this clear.
+Sometimes the \texttt{[]}, \texttt{\{\}} and \texttt{<>} are part of what you type, the context should make this clear.
 
 \begin{description}
 				\item[[]]
@@ -345,7 +345,7 @@ Sometimes the \texttt{[]}, \texttt{{}} and \texttt{<>} are part of what you type
 								\label{[quotex]}
 								See |\texttt{:h registers}|.
 								An optional register designation where text can be stored.
-								The x is a single character between 'a' and 'z' or 'A' and 'Z' or '"'', and in some cases (with the put command) between '0' and '9', '\%', '\#', or others.
+								The x is a single character between 'a' and 'z' or 'A' and 'Z' or '"', and in some cases (with the put command) between '0' and '9', '\%', '\#', or others.
 								The uppercase and lowercase letter designate the same register, but the lowercase letter is used to overwrite the previous register contents, while the uppercase letter is used to append to the previous register contents.
 								Without the ""x" or with """" the stored text is put into the unnamed register.
 
@@ -357,9 +357,9 @@ Sometimes the \texttt{[]}, \texttt{{}} and \texttt{<>} are part of what you type
 				\item[\{char1-char2\}]
 								\label{{char1-char2}}
 								A single character from the range char1 to char2.
-								For example: \texttt{{a-z}} is a lowercase letter.
+								For example: \texttt{\{a-z\}} is a lowercase letter.
 								Multiple ranges may be concatenated.
-								For example, \texttt{{a-zA-Z0-9}} is any alphanumeric character.
+								For example, \texttt{\{a-zA-Z0-9\}} is any alphanumeric character.
 
 				\item[\{motion\}]
 								\label{{motion}}
@@ -408,8 +408,8 @@ Sometimes the \texttt{[]}, \texttt{{}} and \texttt{<>} are part of what you type
 
 				\item[CTRL-\{char\}]
 								\label{CTRL-{char}}
-								\texttt{{char}} typed as a control character; that is, typing \texttt{{char}} while holding the CTRL key down.
-								The case of \texttt{{char}} does not matter; thus CTRL-A and CTRL-a are equivalent.
+								\texttt{\{char\}} typed as a control character; that is, typing \texttt{\{char\}} while holding the CTRL key down.
+								The case of \texttt{\{char\}} does not matter; thus CTRL-A and CTRL-a are equivalent.
 								But on some terminals, using the SHIFT key will produce another code, don't use it then.
 
 				\item[\texttt{'option'}]
@@ -429,6 +429,7 @@ These names for keys are used in the documentation.
 They can also be used with the "\texttt{:map}" command (insert the key name by pressing CTRL-K and then the key you want the name for).
 
 \begin{tabularx}{\textwidth}{|c|X|c|c|c|} % the 5 cm is completely arbitrary but it seems to work in the page
+	
 				\hline
 				notation & meaning                   & equivalent & decimal             & value(s)\\ \hline
 				<Nul>    & zero                      & CTRL-@     & 0 (stored as 10)    & \label{<Nul>}\\
@@ -448,7 +449,7 @@ They can also be used with the "\texttt{:map}" command (insert the key name by p
 				<CSI>    & command sequence intro    & ALT-Esc    & 155                 & \label{<CSI>}\\
 				<xCSI>   & CSI when typed in the GUI &            &                     & \label{<xCSI>}\\
 
-				<EOL> & end-of-line (can be <CR>, <LF> or <CR><LF>, depends on system and \texttt{'fileformat'}) & & & \label{<EOL>}\\ %OK pour les &
+				<EOL> & end-of-line (can be <CR>, <LF> or <CR><LF>, depends on system and `fileformat') & & & \label{<EOL>}\\ %OK pour les &
 
 				<Up>             & cursor-up                      &  &  & \label{cursor-up} \label{cursor_up}\\
 				<Down>           & cursor-down                    &  &  & \label{cursor-down} \label{cursor_down}\\
@@ -485,8 +486,8 @@ They can also be used with the "\texttt{:map}" command (insert the key name by p
 				<M-...>          & alt-key or meta-key            &  &  & \label{meta} \label{alt} \label{<M-}\\
 				<A-...>          & same as <M-...>                &  &  & \label{<A-}\\
 				<D-...>          & command-key (Macintosh only)   &  &  & \label{<D-}\\
-				<t\_xx>          & key with "xx" entry in termcap &  &  & \\
-				\hline
+				<t\_xx>          & key with "xx" entry in termcap &  &  & \\ \hline
+
 \end{tabularx}
 
 \textit{Note}: The shifted cursor keys, the help key, and the undo key are only available on a few terminals.
@@ -602,7 +603,7 @@ There are six ADDITIONAL modes.  These are variants of the BASIC modes:
 \subsubsection{Operator-pending mode}
 \label{Operator-pending}
 \label{Operator-pending-mode}
-This is like Normal mode, but after an operator command has started, and Vim is waiting for a \texttt{{motion}} to specify the text that the operator will work on.
+This is like Normal mode, but after an operator command has started, and Vim is waiting for a \texttt{\{motion\}} to specify the text that the operator will work on.
 
 \subsubsection{Replace mode}
 Replace mode is a special case of Insert mode.
@@ -670,7 +671,7 @@ However, when pressing <Esc> after using CTRL-O in Insert mode you get a beep bu
 								\{Vi: when hitting <Esc> the command-line is executed.
 								This is unexpected for most people; therefore it was changed in Vim.
 								But when the <Esc> is part of a mapping, the command-line is executed.
-								If you want the Vi behaviour also when typing <Esc>, use "\texttt{:cmap \^V<Esc> \^V\^M}"\}
+								If you want the Vi behaviour also when typing <Esc>, use "\texttt{:cmap \^{}V<Esc> \^{}V\^{}M}"\}
 				\item *4 Go from Normal to Select mode by:
 								\begin{itemize}
 												\item use the mouse to select text while \texttt{'selectmode'} contains "mouse"
@@ -805,7 +806,7 @@ The \texttt{'sidescroll'} option can be set to the minimal number of columns to 
 
 All normal ASCII characters are displayed directly on the screen.
 The <Tab> is replaced with the number of spaces that it represents.
-Other non-printing characters are replaced with "\textasciicircum \texttt{{char}",} where \texttt{{char}} is the non-printing character with 64 added.
+Other non-printing characters are replaced with "\textasciicircum \texttt{\{char\}"}, where \texttt{\{char\}} is the non-printing character with 64 added.
 Thus character 7 (bell) will be shown as "\textasciicircum G".
 Characters between 127 and 160 are replaced with "\textasciitilde \{char\}", where \{char\} is the character with 64 subtracted.
 These characters occupy more than one position on the screen.
